install custome css file and linl it

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Avalon Hosting Services LTD</title>
     <!-- Bootstrap 4 Css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- Self Styling -->
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
