--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Avalon Hosting Services LTD</title>
     <!-- Bootstrap 4 Css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <!-- Self Styling -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -26,31 +28,21 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-                <ul class="navbar-nav mr-auto">
-
-                </ul>
                 <ul class="navbar-nav ml-auto nav-flex-icons">
-                    <li class="nav-item">
+                    <li class="nav-item pr-2">
+                        <a class="nav-link waves-effect waves-light">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item pr-2">
                         <a class="nav-link waves-effect waves-light">
                             <i class="fab fa-twitter"></i>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item pr-2">
                         <a class="nav-link waves-effect waves-light">
                             <i class="fab fa-google-plus-g"></i>
                         </a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-user"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right dropdown-default"
-                            aria-labelledby="navbarDropdownMenuLink-333">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
                     </li>
                 </ul>
             </div>
