--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color">
             <a class="navbar-brand" href="#">
                 <img src="/img/logo.png" alt="Logo" style="width:40px;">
-            </a>Avalon Hosting Services LTD</a>
+                Avalon Hosting Services LTD</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent-333" aria-controls="navbarSupportedContent-333"
                 aria-expanded="false" aria-label="Toggle navigation">
