--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container-fluid">
         <!--Navbar -->
-        <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color">
+        <nav class="navbar navbar-expand-lg navbar-dark default-color">
             <a class="navbar-brand" href="#">
                 <img src="/img/logo.png" alt="Logo" style="width:40px;">
                 Avalon Hosting Services LTD</a>
@@ -48,6 +48,9 @@
             </div>
         </nav>
         <!--/.Navbar -->
+        <section>
+            <img class="img-fluid cover-photo" src="/img/Black-Friday-Sale.jpg" alt="Black Friday">
+        </section>
     </div>
     <!-- Bootstrap 4 JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
