--- a/index.html
+++ b/index.html
@@ -51,11 +51,37 @@
         <section>
             <img class="img-fluid cover-photo" src="/img/Black-Friday-Sale.jpg" alt="Black Friday">
         </section>
+
+        <!-- Count Down Timer -->
+        <section class="count-down row p-5">
+            <!-- <img class="img-fluid cover-photo" src="/img/Abstract-landscape-red-wallpapers.jpg" alt="Black Friday"> -->
+            <div class="col-md-2"></div>
+            <div class="col-md-8" id="clockDiv">
+                <h2 id="after-end-of-count-down">WE'RE COUNTING DOWN TO BLACK FRIDAY</h2>
+                <strong id="after-count-down">- the biggest sale of the year starts in</strong><br>
+                <div class="time mt-5">
+                    <b><span class="days" id="day"></span></b>
+                </div>
+                <div class="time">
+                    <b><span class="hours" id="hour"></span></b>
+                </div>
+                <div class="time">
+                    <b><span class="minutes" id="minute"></span></b>
+                </div>
+                <div class="time">
+                    <b><span class="seconds" id="second"></span> </b>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </section>
     </div>
     <!-- Bootstrap 4 JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <!-- Count Down Timer -->
+    <script src="/js/countDown.js"></script>
 </body>
 
 </html>
