Cover image change

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </nav>
         <!--/.Navbar -->
         <section>
-            <img class="img-fluid cover-photo" src="/img/Black-Friday-Sale.jpg" alt="Black Friday">
+            <img class="img-fluid cover-photo" src="/img/Abstract-landscape-red-wallpapers.jpg" alt="Black Friday">
         </section>
 
         <!-- Count Down Timer -->
