Inserted an image

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Avalon Hosting Services LTD BD -->
+<!-- Copyright: Avalon Hosting Services LTD BD -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -74,6 +74,49 @@
             </div>
             <div class="col-md-2"></div>
         </section>
+        <!-- Cards are here -->
+        <div class="row">
+            <div class="col-md-3">
+              <div class="card" style="width: 18rem;">
+                  <img src="img/Domain-Registration.webp" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">GET A DOMAIN NAME</h5>
+                    <p class="card-text over">Buy a domain name while choosing from all of the most popular </p>
+                    <a href="#" class="btn btn-dark">Grab It</a>
+                  </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/Domain-Registration.webp" class="card-img-top" alt="Domain Regestration">
+                    <div class="card-body">
+                      <h5 class="card-title">GET A DOMAIN NAME</h5>
+                      <p class="card-text over">Buy a domain name while choosing from all of the most popular top level domains.Check domain availability and get a domain today.</p>
+                      <a href="#" class="btn btn-dark">Grab It</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                  <div class="card" style="width: 18rem;">
+                      <img src="img/Domain-Registration.webp" class="card-img-top" alt="">
+                      <div class="card-body">
+                        <h5 class="card-title">Worried with hosting?</h5>
+                        <p class="card-text over">It’s that time of the year again! Black Friday 2019 is knocking at your door steps with unbelievable discount. Take this opportunity to save big on your hosting fee this year. Some of the sales have already started. Why are you waiting!!! Check out the deals bellow!</p>
+                        <a href="#" class="btn btn-dark">Grab It</a>
+                      </div>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/Domain-Registration.webp" class="card-img-top" alt="">
+                        <div class="card-body">
+                          <h5 class="card-title">GET A DOMAIN NAME</h5>
+                          <p class="card-text over">Buy a domain name while choosing from all of the most popular top level domains.Check domain availability and get a domain today.</p>
+                          <a href="#" class="btn btn-dark">Grab It</a>
+                        </div>
+                    </div>
+                  </div>
+          </div>
     </div>
     <!-- Bootstrap 4 JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
