--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
             </div>
             <div class="col-md-2"></div>
         </section>
+        <footer>
+
+        </footer>
     </div>
     <!-- Bootstrap 4 JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
