--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@
             </div>
         </nav>
         <!--/.Navbar -->
+
+        <!-- Cover Photo -->
         <section>
             <img class="img-fluid cover-photo" src="/img/Black-Friday-Sale.jpg" alt="Black Friday">
+            <!-- <span class="cover-bgc">
+                <h2 class="text-center">Black <br>
+                    Friday</h2>
+            </span> -->
         </section>
 
         <!-- Count Down Timer -->
@@ -73,6 +79,59 @@
                 </div>
             </div>
             <div class="col-md-2"></div>
+        </section>
+
+        <!-- offers -->
+
+        <section class="container offers">
+
+            <h2 class="text-center pt-5 pb-5">Checkout Available Offers</h2>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card">
+                        <img class="card-img-top" src="/img/Domain-Registration.webp" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-dark">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img class="card-img-top" src="/img/Domain-Registration.webp" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-dark">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img class="card-img-top" src="/img/Domain-Registration.webp" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-dark">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img class="card-img-top" src="/img/Domain-Registration.webp" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-dark">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <footer>
 
