card title, button and images have been added

--- a/index.html
+++ b/index.html
@@ -89,45 +89,45 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="card">
-                        <img class="card-img-top" src="/img/Domain-Registration.webp" alt="Card image cap">
+                        <img class="card-img-top" src="/img/Domain-Registration.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Domain Required?</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-dark">Go somewhere</a>
+                            <a href="#" class="btn btn-dark">Grab It</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img class="card-img-top" src="/img/Domain-Registration.webp" alt="Card image cap">
+                        <img class="card-img-top" src="/img/ssl-security-plan.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Is SSL required?</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-dark">Go somewhere</a>
+                            <a href="#" class="btn btn-dark">Grab It</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img class="card-img-top" src="/img/Domain-Registration.webp" alt="Card image cap">
+                        <img class="card-img-top" src="/img/3-Tips-On-How-To-Choose-Your-Web-Hosting.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Needed web hosting?</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-dark">Go somewhere</a>
+                            <a href="#" class="btn btn-dark">Grab It</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img class="card-img-top" src="/img/Domain-Registration.webp" alt="Card image cap">
+                        <img class="card-img-top" src="/img/Home-Page-V2.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Want a server?</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-dark">Go somewhere</a>
+                            <a href="#" class="btn btn-dark">Grab It</a>
                         </div>
                     </div>
                 </div>
