Offer flag add top of the offer photo

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
         <!-- Cover Photo -->
         <section>
-            <img class="img-fluid cover-photo" src="/img/Black-Friday-Sale.jpg" alt="Black Friday">
-            <!-- <span class="cover-bgc">
-                <h2 class="text-center">Black <br>
+            <!-- <img class="img-fluid cover-photo" src="/img/Black-Friday-Sale.jpg" alt="Black Friday"> -->
+            <span class="cover-bgc">
+                <h2 class="col text-center">Black <br>
                     Friday</h2>
-            </span> -->
+            </span>
         </section>
 
         <!-- Count Down Timer -->
@@ -97,6 +97,7 @@
                             <a href="#" class="btn btn-dark">Go somewhere</a>
                         </div>
                     </div>
+                    <span class="offer-amount">Offer</span>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
@@ -108,6 +109,7 @@
                             <a href="#" class="btn btn-dark">Go somewhere</a>
                         </div>
                     </div>
+                    <span class="offer-amount">Offer</span>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
@@ -119,6 +121,7 @@
                             <a href="#" class="btn btn-dark">Go somewhere</a>
                         </div>
                     </div>
+                    <span class="offer-amount">Offer</span>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
@@ -130,6 +133,7 @@
                             <a href="#" class="btn btn-dark">Go somewhere</a>
                         </div>
                     </div>
+                    <span class="offer-amount">Offer</span>
                 </div>
             </div>
         </section>
