Offer info changed

--- a/index.html
+++ b/index.html
@@ -92,8 +92,12 @@
                         <img class="card-img-top" src="/img/Domain-Registration.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Domain Required?</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <b><p class="card-text">TLDs 50%-80% OFF<br></b>
+                                .co	<strike>$31.25 USD</strike>	$6.04 USD
+                                .cash <strike>$34.25 USD</strike> $6.04 USD
+                                .city <strike>$24.25 USD</strike> $7.14 USD
+                                Want to know more? Press the button below.
+                            </p>
                             <a href="#" class="btn btn-dark">Grab It</a>
                         </div>
                     </div>
@@ -104,8 +108,9 @@
                         <img class="card-img-top" src="/img/ssl-security-plan.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Is SSL required?</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">High standard affordable security SSL like Symantec, thawte, Comodo, Domain Validated UCC SSL 
+                                are available within the best price ever. For more info go below.
+                            </p>
                             <a href="#" class="btn btn-dark">Grab It</a>
                         </div>
                     </div>
