cover photo try to change

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section>
             <!-- <img class="img-fluid cover-photo" src="/img/Black-Friday-Sale.jpg" alt="Black Friday"> -->
             <span class="cover-bgc">
-                <h2 class="col text-center">Black <br>
+                <h2 class="col-md-4 text-center">Black <br>
                     Friday</h2>
             </span>
         </section>
@@ -113,7 +113,8 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img class="card-img-top" src="/img/3-Tips-On-How-To-Choose-Your-Web-Hosting.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="/img/3-Tips-On-How-To-Choose-Your-Web-Hosting.jpg"
+                            alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Needed web hosting?</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
