--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
         <!-- Cover Photo -->
         <section>
-            <!-- <img class="img-fluid cover-photo" src="/img/Black-Friday-Sale.jpg" alt="Black Friday"> -->
-            <span class="cover-bgc">
+            <img class="img-fluid cover-photo" src="/img/Black-Friday-Sale.jpg" alt="Black Friday">
+            <!-- <span class="cover-bgc">
                 <h2 class="col-md-4 text-center">Black <br>
                     Friday</h2>
-            </span>
+            </span> -->
         </section>
 
         <!-- Count Down Timer -->
@@ -92,11 +92,13 @@
                         <img class="card-img-top" src="/img/Domain-Registration.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Domain Required?</h5>
-                            <b><p class="card-text">TLDs 50%-80% OFF<br></b>
-                                .co	<strike>$31.25 USD</strike>	$6.04 USD
-                                .cash <strike>$34.25 USD</strike> $6.04 USD
-                                .city <strike>$24.25 USD</strike> $7.14 USD
-                                Want to know more? Press the button below.
+                            <b>
+                                <p class="card-text">TLDs 50%-80% OFF<br>
+                            </b>
+                            .co <strike>$31.25 USD</strike> $6.04 USD
+                            .cash <strike>$34.25 USD</strike> $6.04 USD
+                            .city <strike>$24.25 USD</strike> $7.14 USD
+                            Want to know more? Press the button below.
                             </p>
                             <a href="#" class="btn btn-dark">Grab It</a>
                         </div>
@@ -108,7 +110,8 @@
                         <img class="card-img-top" src="/img/ssl-security-plan.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Is SSL required?</h5>
-                            <p class="card-text">High standard affordable security SSL like Symantec, thawte, Comodo, Domain Validated UCC SSL 
+                            <p class="card-text">High standard affordable security SSL like Symantec, thawte, Comodo,
+                                Domain Validated UCC SSL
                                 are available within the best price ever. For more info go below.
                             </p>
                             <a href="#" class="btn btn-dark">Grab It</a>
