--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <h2 class="text-center pt-5 pb-5">Checkout Available Offers</h2>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6 col-sm-6 pb-3">
                     <div class="card">
                         <img class="card-img-top" src="/img/Domain-Registration.png" alt="Card image cap">
                         <div class="card-body">
@@ -105,7 +105,7 @@
                     </div>
                     <span class="offer-amount">Offer</span>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6 col-sm-6 pb-3">
                     <div class="card">
                         <img class="card-img-top" src="/img/ssl-security-plan.png" alt="Card image cap">
                         <div class="card-body">
@@ -119,12 +119,12 @@
                     </div>
                     <span class="offer-amount">Offer</span>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6 col-sm-6 pb-3">
                     <div class="card">
                         <img class="card-img-top" src="/img/3-Tips-On-How-To-Choose-Your-Web-Hosting.jpg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Needed web hosting?</h5>
+                            <h5 class="card-title">Needed hosting?</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                             <a href="#" class="btn btn-dark">Grab It</a>
@@ -132,7 +132,7 @@
                     </div>
                     <span class="offer-amount">Offer</span>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6 col-sm-6 pb-3">
                     <div class="card">
                         <img class="card-img-top" src="/img/Home-Page-V2.png" alt="Card image cap">
                         <div class="card-body">
